--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,8 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Space+Mono|Muli">
 
         <!-- BOOTSTRAP LINK cambia todo... -->
-        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
     </head>
 
@@ -147,10 +148,15 @@
                             <input class="form_margin_botton" type="checkbox" id="terms" name="terms" value="accept-terms" checked required>
                             <label for="form_label form_radio" class="btn btn-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Tienes que aceptar los terminos para enviar tu comentario">Aceptar los <a href="terms.html"><b>Términos y Servicios.</b></a></label>
                             <!-- </div> -->
-                            <div>
-                                <button class="btn btn-success" type="submit" value="Enviar" dirname="contact.html" class="btn btn-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Enviar formulario.">
-                                <button class="btn btn-secondary" type="reset" class="btn btn-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Restablecer información">
-                            </div>
+
+                            <!-- <div>
+                                <button type="button" class="btn btn-primary" value="Enviar" dirname="contact.html" data-bs-toggle="tooltip" data-bs-placement="top" title="Enviar formulario.">
+                                <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Restablecer información">
+                            </div> -->
+
+                            <button type="button" class="btn btn-primary">Primary</button>
+                            <button type="button" class="btn btn-secondary">Secondary</button>
+
                         </div>
                     </form>
 
