--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Autor de la página web -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- Formato responsivo -->
-        <link rel="stylesheet" href="estilos.css" />
+        <link rel="stylesheet" href="style.css" />
         <!-- La pagina de estilos-->
         <!-- <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> --><!-- Emoji -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia"> <!-- GOOGLE FONT-->
