--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
 		<meta charset="UTF-8"> <!-- Codifación de la web -->
 		<meta name="author" content="Equipo1"> <!-- Autor de la página web -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Formato responsivo -->
-        <link rel="stylesheet" href="estilos.css" />
+        <link rel="stylesheet" href="style.css" />
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Space+Mono|Muli">
         	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
